--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -25,20 +25,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 1,
+     "output_type": "execute_result",
+     "metadata": {}
+    }
+   ],
    "source": [
-    ""
+    "import numpy as np\n",
+    "np.zeros(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  1.,  1.,  1.],\n       [ 1.,  1.,  1.,  1.],\n       [ 1.,  1.,  1.,  1.]])"
+      ]
+     },
+     "execution_count": 2,
+     "output_type": "execute_result",
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.ones((3, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0.,  0.,  0.,  0.],\n        [ 0.,  0.,  0.,  0.],\n        [ 0.,  0.,  0.,  0.]]), array([[ 1.,  1.,  1.,  1.],\n        [ 1.,  1.,  1.,  1.],\n        [ 1.,  1.,  1.,  1.]]))"
+      ]
+     },
+     "execution_count": 9,
+     "output_type": "execute_result",
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "e = np.empty((3, 4))\n",
+    "z = np.ones_like(e)\n",
+    "e, z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "import numpy as np\n",
+    "np.identity(4)"
    ]
   },
   {
