--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -90,12 +90,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  0.,  0.,  0.],\n       [ 0.,  1.,  0.,  0.],\n       [ 0.,  0.,  1.,  0.],\n       [ 0.,  0.,  0.,  1.]])"
+      ]
+     },
+     "execution_count": 12,
+     "output_type": "execute_result",
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "I = np.identity(4)\n",
+    "I"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.identity(4)"
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([1, 2, 3], dtype=np.float)\n",
+    "c = a.astype(np.float)\n",
+    "a, b, c"
    ]
   },
   {
